Implement file download (single + bulk), modal confirmations, and filename consistency fixes